2005-09-20 Magnus Hagdorn
 * glide_nc_custom.f90: fixed bug when lithoz is not used

2005-09-13 Magnus Hagdorn
 * glimmer_integrate.f90: fixed minor problem with NAG f95 v 4.2
 * glimmer_pdd.f90: ditto
 * glimmer_ncio.f90: fixed problem with comparing two floats on i386
   using NAG compiler (commited bug on GLIMMER head on 2005-08-12)

2005-09-12 Magnus Hagdorn
 * drivers.tex: update doc of EIS driver
 * glide_vars.def: fix units of lithoz variable
 * eis_glide.f90: use config file name for log file base name
 * simple_glide.f90: ditto

2005-09-05 Magnus Hagdorn
 * glide_lithot.f90: move 3D code to glide_lithot3d.f90 and provide wrapper
   functions to 1D and 3D solvers
 * glide_lithot1d.f90: solve thermal diffusion eqn in 1D
 * glide_lithot3d.f90: solve thermal diffusion eqn in 3D
 * Makefile.am: add new files
 * glide_types.f90: add variables for 1D solver and move some memory allocation
   to the initialisation of the 1D/3D solver
 * glide_setup.f90: select 1D/3D solver at run-time
 * glide_temp.f90: move tri-diagonal matrix solver to glimmer_utils.f90
 * glimmer_utils.f90: added tri-diagonal matrix solver
 * glide.tex: updated docs

2005-09-01 Magnus Hagdorn
 * glimmer_coordinates.f90: add allocation procedures for many data types and
   provide generic interface
 * glide_types.f90: use glimmer_coordinate field allocation procedures

2005-09-01 Magnus Hagdorn
 * glide_types.f90: new variable for basal water depth in velo grid
 * glide_velo.f90: rename calcbtrc to calc_btrc and make it public, use
   stagbwat; change API of slipvelo, btrc is now calculated after temps
   have been calculated
 * glide.f90: slipvelo API changed, calculate basal traction param after
   temp calculations
 * glide_temp.f90: also transform basal water depth to velo grid
 * glide_thck.f90: slipvelo API changed

2005-08-11 Magnus Hagdorn
 * eis_ela.f90: ablation over ice shelves wasn't scaled properly

2005-07-14 Magnus Hagdorn