@@ -75,6 +75,16 @@ Encoding: ISO8859_1
   key = {ism},
 }
 
+@BOOK{Press1992,
+  title = {Numerical Recipes in FORTRAN},
+  publisher = {Cambridge University Press},
+  year = {1992},
+  author = {W.H. Press and S.A. Teukolsky and W.T. Vetterling and B.P. Flannery},
+  edition = {2nd},
+  category = {Numerics},
+  keywords = {numerics},
+}
+
 @INPROCEEDINGS{Ritz1987,
   author = {C. Ritz},
   title = {Time dependent boundary conditions for calculation of temperature fields in ice sheets},
