@@ -1,5 +1,5 @@
-graphics = scale.pstex_t grid.pstex_t scale.pstex grid.pstex thick_evo.eps grid_ew.eps basal_bc.eps basal_alg.eps
-EXTRA_DIST = grid.fig scale.fig grid_ew.dia basal_bc.fig basal_alg.dia $(graphics)
+graphics = scale.pstex_t grid.pstex_t scale.pstex grid.pstex thick_evo.eps grid_ew.eps basal_bc.eps basal_alg.eps staggered_grid.pstex staggered_grid.pstex_t
+EXTRA_DIST = grid.fig scale.fig grid_ew.dia basal_bc.fig basal_alg.dia staggered_grid.fig $(graphics)
 BUILT_SOURCES = $(graphics)
 CLEANFILES = $(BUILT_SOURCES)
 include $(top_srcdir)/doc/make_doc.rules
