@@ -1,0 +1,47 @@
+#FIG 3.2
+Landscape
+Center
+Metric
+A4      
+100.00
+Single
+-2
+1200 2
+1 3 0 1 0 7 50 -1 -1 0.000 1 0.0000 1350 2250 90 90 1350 2250 1440 2250
+1 3 0 1 0 7 50 -1 -1 0.000 1 0.0000 2700 2250 90 90 2700 2250 2790 2250
+1 3 0 1 0 7 50 -1 -1 0.000 1 0.0000 4050 2250 90 90 4050 2250 4140 2250
+1 3 0 1 0 7 50 -1 -1 0.000 1 0.0000 2700 3600 90 90 2700 3600 2790 3600
+1 3 0 1 0 7 50 -1 -1 0.000 1 0.0000 2700 900 90 90 2700 900 2790 900
+1 3 0 1 0 0 50 -1 20 0.000 1 0.0000 2700 2925 90 90 2700 2925 2790 2925
+1 3 0 1 0 0 50 -1 20 0.000 1 0.0000 2700 1575 90 90 2700 1575 2790 1575
+1 3 0 1 0 0 50 -1 20 0.000 1 0.0000 3375 2250 90 90 3375 2250 3465 2250
+1 3 0 1 0 0 50 -1 20 0.000 1 0.0000 2025 2250 90 90 2025 2250 2115 2250
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 2610 2250 1440 2250
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 3960 2250 2790 2250
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 2700 3510 2700 2340
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 2700 2160 2700 990
+2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 3285 2835 3465 2835 3465 3015 3285 3015 3285 2835
+2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 3285 1485 3465 1485 3465 1665 3285 1665 3285 1485
+2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 1935 1485 2115 1485 2115 1665 1935 1665 1935 1485
+2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 1935 2835 2115 2835 2115 3015 1935 3015 1935 2835
+4 1 0 50 -1 0 12 0.0000 2 195 870 1350 2565 $H_{i-1,j}$\001
+4 1 0 50 -1 0 12 0.0000 2 195 915 4050 2520 $H_{i+1,j}$\001
+4 1 0 50 -1 0 12 0.0000 2 195 915 2700 720 $H_{i,j+1}$\001
+4 1 0 50 -1 0 12 0.0000 2 195 870 2700 3915 $H_{i,j-1}$\001
+4 0 0 50 -1 0 12 0.0000 2 195 720 2745 2520 $H_{i,j}$\001
+4 1 0 50 -1 0 12 0.0000 2 195 1440 2025 2025 $q_{i-\\frac12,j}^x$\001
+4 1 0 50 -1 0 12 0.0000 2 195 1485 3375 2025 $q_{i+\\frac12,j}^x$\001
+4 1 0 50 -1 0 12 0.0000 2 195 1485 2700 1305 $q_{i,j+\\frac12}^y$\001
+4 1 0 50 -1 0 12 0.0000 2 195 1440 2700 3240 $q_{i,j-\\frac12}^y$\001
+4 1 0 50 -1 0 12 0.0000 2 195 1635 2025 3195 $\\tilde{D}_{r-1,s-1}$\001
+4 1 0 50 -1 0 12 0.0000 2 195 1485 3375 3195 $\\tilde{D}_{r,s-1}$\001
+4 1 0 50 -1 0 12 0.0000 2 195 1335 3375 1395 $\\tilde{D}_{r,s}$\001
+4 1 0 50 -1 0 12 0.0000 2 195 1485 2025 1395 $\\tilde{D}_{r-1,s}$\001
