@@ -303,7 +303,7 @@ contains
   end function lsum
 
   !+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-  subroutine tridag(a,b,c,r,u)
+  subroutine tridag(a,b,c,r,u,n)
     !*FD tri-diagonal matrix solver
 
     use glimmer_global, only : dp
@@ -312,22 +312,28 @@ contains
 
     real(dp), dimension(:), intent(in) :: a,b,c,r
     real(dp), dimension(:), intent(out) :: u
+    integer, intent(in), optional :: n
 
     real(dp), dimension(size(b)) :: gam
-    integer :: n, j
+    integer :: nn, j
     real(dp) :: bet
 
-    n=size(b)
+    if (present(n)) then
+       nn = n
+    else
+       nn=size(b)
+    end if
 
-    bet = b(1); u(1) = r(1)/bet
+    bet = b(1)
+    u(1) = r(1)/bet
 
-    do j = 2,n
+    do j = 2,nn
        gam(j) = c(j-1) / bet
        bet = b(j) - a(j-1) * gam(j)
        u(j) = (r(j)- a(j-1) * u(j-1)) / bet
     end do
 
-    do j = n-1,1,-1
+    do j = nn-1,1,-1
        u(j) = u(j) - gam(j+1) * u(j+1)
     end do
 
